--- a/notebooks/naver_news_crawler.ipynb
+++ b/notebooks/naver_news_crawler.ipynb
@@ -37,8 +37,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-03T06:34:03.303633Z",
-     "start_time": "2025-04-03T06:34:03.290665Z"
+     "end_time": "2025-04-04T06:10:01.205390Z",
+     "start_time": "2025-04-04T06:09:59.613599Z"
     }
    },
    "cell_type": "code",
@@ -46,28 +46,30 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "import pandas as pd\n",
-    "import time"
+    "import time\n",
+    "import re"
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-03T06:34:03.993794Z",
-     "start_time": "2025-04-03T06:34:03.981826Z"
+     "end_time": "2025-04-04T06:36:18.395260Z",
+     "start_time": "2025-04-04T06:36:18.381272Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# 날짜 선택 함수\n",
+    "import re# 날짜 선택 함수\n",
     "def select_dropdown_date(driver, year: str, month: str, day: str, is_start=True):\n",
     "    trigger_class = \"_start_trigger\" if is_start else \"_end_trigger\"\n",
     "    driver.find_element(By.CLASS_NAME, trigger_class).click()\n",
     "    time.sleep(0.5)\n",
     "\n",
     "    # 연도 선택\n",
+    "\n",
     "    year_xpath = f'//strong[text()=\"년(Year)\"]/following-sibling::div//li[@data-value=\"{year}\"]/a'\n",
     "    driver.find_element(By.XPATH, year_xpath).click()\n",
     "    time.sleep(0.2)\n",
@@ -84,30 +86,32 @@
    ],
    "id": "163ecb80d1071e8a",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-03T06:48:45.817570Z",
-     "start_time": "2025-04-03T06:48:45.805603Z"
+     "end_time": "2025-04-04T06:36:19.300559Z",
+     "start_time": "2025-04-04T06:36:19.287594Z"
     }
    },
    "cell_type": "code",
    "source": [
     "keyword = \"코스피\"\n",
-    "start_date = (\"2016\", \"2\", \"1\")\n",
-    "end_date = (\"2016\", \"2\", \"28\")"
+    "start_date = (\"2016\", \"3\", \"1\")\n",
+    "end_date = (\"2016\", \"3\", \"31\")"
    ],
    "id": "4ed309b157220030",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 6
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-04-03T06:57:21.549982Z",
-     "start_time": "2025-04-03T06:50:12.209052Z"
+     "start_time": "2025-04-04T06:36:19.732320Z"
     }
    },
    "cell_type": "code",
@@ -168,8 +172,13 @@
     "        title = title_tag.text\n",
     "        url = link.get_attribute(\"href\")\n",
     "        # 날짜 추출\n",
-    "        date_span = article_block.find_element(By.CSS_SELECTOR, \"span.info\")\n",
-    "        date = date_span.text\n",
+    "        date = \"\"\n",
+    "        info_spans = article_block.find_elements(By.CSS_SELECTOR, \"span.info\")\n",
+    "        for span in info_spans:\n",
+    "            text = span.text.strip()\n",
+    "            if re.match(r\"\\d{4}\\.\\d{2}\\.\\d{2}\\.\", text):\n",
+    "                date = text\n",
+    "                break\n",
     "        results.append({\"title\": title, \"url\": url, \"date\": date})\n",
     "    except Exception as e:\n",
     "        continue\n",
@@ -179,22 +188,14 @@
     "#     print(f\"[제목] {r['title']}\\n[URL] {r['url']}\\n\")\n",
     "\n",
     "df = pd.DataFrame(results)\n",
-    "df.to_csv(\"../data/코스피_201602.csv\", index=False, encoding='utf-8-sig')\n",
+    "df.to_csv(\"../data/코스피_201603.csv\", index=False, encoding='utf-8-sig')\n",
     "print(\"CSV 파일로 저장 완료\")\n",
     "\n",
     "driver.quit()"
    ],
    "id": "b01150d7ff382caf",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CSV 파일로 저장 완료\n"
-     ]
-    }
-   ],
-   "execution_count": 20
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
